[package]
name = "rust-via-game-dev"
version = "0.1.0"
authors = ["James Qualls <qualls.james@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
vek = "0.12"
sdl2 = { version = "0.34", features = ["static-link", "bundled", "raw-window-handle"] }
